--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "se_project_aroundtheus",
   "version": "1.0.0",
   "description": "This project aims to build a responsive webpage to showcase overall knowledge and techniques covered through Sprint 3, including _grid layout_, _relative units of measurement_, and _media queries_. The webpage is created based on design brief from the **Figma** spec sheet, and should have semantic HTML structure in adherence to **_BEM methodology_**.",
-  "main": "index.js",
+  "main": "./src/pages/index.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve --mode development"
